--- a/VirtualPostIt/AndroidManifest.xml
+++ b/VirtualPostIt/AndroidManifest.xml
@@ -21,15 +21,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NoteActivity"
-            android:label="@string/title_activity_note" >
+            android:name=".NoteEditActivity"
+            android:label="@string/title_activity_note_edit" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="android.virtualpostit.PostIt" />
         </activity>
         <activity
-            android:name=".NoteEditActivity"
-            android:label="@string/title_activity_note_edit" >
+            android:name=".NoteViewActivity"
+            android:label="@string/title_activity_note_view" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="android.virtualpostit.NoteActivity" />
@@ -46,5 +46,7 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
