--- a/VirtualPostIt/AndroidManifest.xml
+++ b/VirtualPostIt/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.virtualpostit"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -14,7 +14,7 @@
         <activity
             android:name=".PostIt"
             android:label="@string/title_activity_post_it" >
-            <intent-filter>
+            <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
