--- a/VirtualPostIt/AndroidManifest.xml
+++ b/VirtualPostIt/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".PostIt"
-            android:label="@string/title_activity_post_it" >
-            <intent-filter android:label="@string/app_name" >
+            android:screenOrientation="portrait" >
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
